css/style.css
/*--
Author: W3layouts
Author URL: http://w3layouts.com
License: Creative Commons Attribution 3.0 Unported
License URL: http://creativecommons.org/licenses/by/3.0/
--*/

/*noinspection ALL*/
@font-face {
    font-family: myFirstFont;
    src: url('Funhouse.ttf');
}

html, body{
    font-size: 100%;
    font-family: 'myFirstFont', sans-serif;
    background: -webkit-linear-gradient(to left, #590f03, #000000, #000000); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, rgba(47,10,3,0.9), rgba(0,0,0,0.65), rgba(0,0,0,0.65)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    margin: 0;
}


p,ul li,ol li{
    margin:0;
    font-size:14px;
    letter-spacing: 1px;
}
h1,h2,h3,h4,h5,h6{
    font-family: 'myFirstFont', sans-serif;
    text-transform:uppercase;
    margin:0;
}
ul,label{
    margin:0;
    padding:0;
}
body a:hover{
    text-decoration:none;
}
input[type="submit"],input[type="reset"],.w3ls_footer_grid_leftl,.w3ls_footer_grid_leftr h4,.w3l_footer_pos p a,.w3ls_footer_grid_leftr a,.w3layouts_header_right ul li a,.w3ls_social li a,.w3_team_grid1_pos,.w3_team_grid1_pos img{
    transition: .5s ease-in;
    -webkit-transition: .5s ease-in;
    -moz-transition: .5s ease-in;
    -o-transition: .5s ease-in;
    -ms-transition: .5s ease-in;
}
/*-- header --*/
.sizeOfCanvas{
    height: auto;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}
.sizeOfCanvasSm{
    height:auto;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}
.sizeOfCanvaslg{
    height: auto;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}
.sizeOfCanvasTrailer{
    height: auto;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}
.w3layouts_header_left{
    float:left;
}
.w3layouts_header_left p{
    color: #999;
    line-height: 1.8em;
    float: left;
    margin: 5px 42px 0 0;
}
.w3layouts_header_left a {
    color: #999;
}
.w3layouts_header_right{
    float: right;
    position: relative;
    width: 23%;
}
.header {
    padding: 0.6em 3em;
    background: #1d1d1d;
}
.w3layouts_header_right input[type="search"] {
    width: 65%;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    outline: none;
    border: none;
    background: #fff;
    color: #999;
    padding:8px 15px 8px 15px;
    font-size: 13px;
    float: left;
}
.w3layouts_header_right input[type="submit"] {
    outline: none;
    border: none;
    background: #ff5000 url(../images/search.png)no-repeat 12px 5px;
    color: #fff;
    padding: 6px 0;
    width: 17%;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    -webkit-transition: all 0.2s ease 0s;
    -moz-transition: all 0.2s ease 0s;
    -o-transition: all 0.2s ease 0s;
    -ms-transition: all 0.2s ease 0s;
}
/*-- nav --*/
.navbar-default {
    background: none;
    border: none;
}
.navbar {
    margin-bottom: 0;
}
.w3_navigation {
    background: -webkit-linear-gradient(to left, #000000, #2d2d2d); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(45, 45, 45, 0.6)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    position:fixed;
    width: 100%;
    height: 75px;
    z-index: 1000;
}
.navbar-nav {
    float: none;
    margin: 1em 0 1em 0;
}
.navbar-collapse {
    padding: 0;
}
.navbar-right {
    float: none !important;
    margin-right: 0;
}
.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
    color:#fa3d03 !important;
    background: none;
}

.navbar-default .navbar-nav > li > a{
    color: #ffffff;
}

.navbar-nav > li > a {
    margin:1em 1.8em;
    padding: 0;
    line-height: 1em;
    font-weight: bold;
    text-transform: uppercase;
}
.navbar-nav > li:nth-child(3) a {
    margin-right: 34em !important;
}
.navbar-nav > li:nth-child(6) a {
    margin-right:0px!important;
}
.w3_navigation_pos {
    position: absolute;
    top: 24%;
    left: 37%;
    z-index: 999;
}
.w3_navigation_pos h3 a {
    font-size: 1em;
    color: #ffffff;
    text-decoration: none;
    padding: 0.1em .4em;
    font-weight: 700;
    text-transform: uppercase;
    font-family: 'myFirstFont',Arial,sans-serif;
}
.navbar-default .navbar-nav > li > a:hover{
    color: #fa3d03;
}
/* Effect 5: same word slide in */
.cl-effect-5 a {
    overflow: hidden;
    padding: 0 4px;
}

.cl-effect-5 a span {
    position: relative;
    display: inline-block;
    -webkit-transition: -webkit-transform 0.3s;
    -moz-transition: -moz-transform 0.3s;
    transition: transform 0.3s;
}

.cl-effect-5 a span::before {
    position: absolute;
    top: 100%;
    content: attr(data-hover);
    -webkit-transform: translate3d(0,0,0);
    -moz-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
}

.cl-effect-5 a:hover span,
.cl-effect-5 a:focus span {
    -webkit-transform: translateY(-100%);
    -moz-transform: translateY(-100%);
    transform: translateY(-100%);
}

/* Effect 5: same word slide in and border bottom */
/*-- //nav --*/
.fa-cog{
    -webkit-animation: fa-spin 3s infinite linear;
    animation: fa-spin 3s infinite linear;
}
/*-- //header --*/
/*-- banner --*/
.w3_navigation_pos h1 a i {
    font-size: .6em;
    color: #f83e03;
}
.slider-info {
    position: absolute;
    top: 40%;
    z-index: 999;
    left: 0px;
    width: 100%;
    height: 100%;
    text-align:center;
}
.slider-info h4 {
    font-size: 3em;
    color: #fff;
    letter-spacing: 5px;
    text-transform: uppercase;
    font-weight: 200;
}
.slider-info a {
    font-size:1em;
    padding:0.6em 2em;
    color:#fff;
}
/* ... */

